Close HTML tags in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -22,5 +22,7 @@
         or <a href="login.html">login</a> in a moment.
         If Javascript is disabled, please enable it.
       </p>
+    </div>
+  </body>
 </html>
 
