--- a/app/welcome.html
+++ b/app/welcome.html
@@ -24,7 +24,7 @@
         router</b>, you should click through the warnings to continue.
       </p>
       <br>
-      <a id=continue class=button href="https://gw.home.lan/">Continue</a>
+      <a id="continue" class="button" href="https://gw.home.lan/">Continue</a>
     </div>
   </body>
 </html>
