Implemented diceware password generator

--- a/app/setSSID.html
+++ b/app/setSSID.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/helper.js"></script>
     <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
+    <script type="text/javascript" src="js/diceware.js"></script>
     <script type="text/javascript" src="js/ssid.js"></script>
     <title>Set SSID</title>
   </head>
