Retain and notify whether software update is available

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -43,7 +43,7 @@
            <section id="main"></section>
          
            <footer>
-             <p>Last checked for software updates: <span id="date">June 11, 2014</span></p>
+             <p>Software update <span id="avail">......</span> : last checked <span id="date">......</span></p>
                <img id="checkForUpdate" src="images/update.png" alt="update" />
            </footer>
            <div class="ips">
