--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
         <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
         <script type="text/javascript" src="lib/jquery-timer.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/templates.js"></script>
         <script type="text/javascript" src="js/request.js"></script>
         <script type="text/javascript" src="js/helper.js"></script>
