Consolidated date formatting logic in handlebars helper.

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -42,18 +42,7 @@
 
            <section id="main"></section>
          
-           <footer>
-
-             <div id="check-for-updates">
-               <div class="message">
-                 <p>Update <span id="avail">......</span> : last checked <span id="date">......</span></p>
-                 <img id="checkForUpdate" src="images/update.png" alt="update"/>
-               </div>
-
-               <div class="loading-message"><p>Loading...</p></div>
-             </div>
-
-           </footer>
+           <footer id="last-update"></footer>
            <div class="ips">
              <span class="ip">WAN IP: <span id="wan-ip">Loading</span></span><span class="ip">LAN IP: <span id="lan-ip">Loading</span></span>
            </div>
