--- a/spec/index.html
+++ b/spec/index.html
@@ -11,6 +11,9 @@
   <script type="text/javascript" src="lib/jasmine-fixture.min.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
+  <script type="text/javascript" src="../js/app.js"></script>
+  <script type="text/javascript" src="../js/templates.js"></script>
   <script type="text/javascript" src="../app/js/request.js" data-cover></script>
   <script type="text/javascript" src="../app/js/helper.js" data-cover></script>
   <script type="text/javascript" src="../app/js/login.js" data-cover></script>
