--- a/app/login.html
+++ b/app/login.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     <link rel="shortcut icon" href="images/favicon.png" media="screen" />
     <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-timer.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
     <script type="text/javascript" src="js/helper.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
@@ -15,15 +19,6 @@
   <body>
     <header></header>
     <div class="formDiv">
-      <h1>Open Wireless</h1>
-      <h4>Administrator Login</h4>
-      <form>
-        <div id="genericError" class="inputError"></div>
-        <input type="password" placeholder="Administrator password" id="password"/><br>
-        <input type="checkbox" id="showPassword"><label for="showPassword">Show password</label><br>
-        <div id="passwordError" class="inputError"></div>
-        <input type="submit" value="Login"/>
-      </form>
     </div>
   </body>
 </html>
