make changePassword tests work with templates instead of fixture

--- a/app/changePassword.html
+++ b/app/changePassword.html
@@ -6,6 +6,9 @@
     <link rel="shortcut icon" href="images/favicon.png" media="screen" />
     <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="lib/jstz-1.0.4.min.js"></script>
+    <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/helper.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
@@ -16,18 +19,6 @@
     <div id="outerContainer">
       <header></header>
       <div class="formDiv">
-        <h1 class="changePassword">Change Administrator Password</h1>
-        <h1 class="setPassword">Set Administrator Password</h1>
-        <form>
-          <div id="genericError" class="inputError"></div>
-          <input type="password" id="oldPassword" class="changePassword" placeholder="Old password"/><br>
-          <br>
-          <input type="password" id="newPassword" placeholder="New password"/><br>
-          <div id="newPasswordError" class="inputError"></div>
-          <input type="password" id="retypePassword" placeholder="Retype new password"/><br>
-          <div id="retypePasswordError" class="inputError"></div>
-          <input type="submit" value="Submit"></input>
-        </form>
       </div>
     </div>
   </body>
